layout > 35rem; fix spacing

--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,14 @@ div#d
         margin-top: 2rem;
         row-gap: 1rem;
     }
+.layoutb
+{
+    display: grid;
+}
+.layouta div 
+    {
+        text-align: center;
+    }
 @media screen and (max-width:35rem)
 {
     nav li 
@@ -146,10 +154,7 @@ div#d
         margin-top: 2rem;
     }
 
-    .layouta div 
-    {
-        text-align: center;
-    }
+    
 }
 @media screen and (min-width:35rem)
 {
@@ -164,10 +169,33 @@ div#d
         flex-wrap: wrap;
         max-inline-size: 16rem;
     }
-   .colors div 
+    .layoutb .colors div 
     {
         min-inline-size: 8rem;
         min-block-size: 8rem;
+    }
+    .layouta
+    {
+        max-inline-size: 30rem;
+        margin: auto;
+        margin-top: 2rem;
+    }
+    .layouta .colors
+    {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        min-block-size: 10rem;
+        max-inline-size: 10rem;
+    }
+    .layouta section
+    {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        row-gap: 0;
+        margin: 0;
+        padding: 0;
     }
 }
 @media screen and (min-width:60rem)
